--- a/static/series_index.html
+++ b/static/series_index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <h1>Series Index</h1>
+
+    <ul class="nav" id="index-nav"></ul>
     <div id="index-container"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
