horizontally center index nav, adjust width/spacing of index nav links

--- a/static/series_index.html
+++ b/static/series_index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>Series Index</h1>
+    <h1 id="index-title">Series Index</h1>
 
     <ul class="nav" id="index-nav"></ul>
     <div id="index-container"></div>
