--- a/static/series_index.html
+++ b/static/series_index.html
@@ -12,10 +12,12 @@
 </head>
 
 <body>
-    <h1 id="index-title">Series Index</h1>
+    <h1 id="page-title">Series Index</h1>
 
-    <ul class="nav" id="index-nav"></ul>
-    <div id="index-container"></div>
+    <div id="title-index-container">
+        <ul class="nav" id="title-index-nav"></ul>
+        <div id="title-index"></div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
