--- a/static/series_index.html
+++ b/static/series_index.html
@@ -14,9 +14,29 @@
 <body>
     <h1 id="page-title">Series Index</h1>
 
-    <div id="title-index-container">
-        <ul class="nav" id="title-index-nav"></ul>
-        <div id="title-index"></div>
+    <ul class="nav nav-tabs" id="index-tab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="title-index-tab" data-bs-toggle="tab"
+                data-bs-target="#title-index-container" type="button" role="tab" aria-controls="home"
+                aria-selected="true">By Title</button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="author-index-tab" data-bs-toggle="tab"
+                data-bs-target="#author-index-container" type="button" role="tab" aria-controls="home"
+                aria-selected="true">By Author</button>
+        </li>
+    </ul>
+
+    <div class="tab-content" id="indexes">
+        <div class="tab-pane fade show active" id="title-index-container" role="tabpanel"
+            aria-labelledby="title-index-tab">
+            <ul class="nav" id="title-index-nav"></ul>
+            <div id="title-index"></div>
+        </div>
+        <div class="tab-pane fade" id="author-index-container" role="tabpanel" aria-labelledby="author-index-tab">
+            <ul class="nav" id="author-index-nav"></ul>
+            <div id="author-index"></div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
