--- a/static/series_index.html
+++ b/static/series_index.html
@@ -8,6 +8,7 @@
     <title>Basil Series Index</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/series_index.css">
 </head>
 
@@ -45,23 +46,9 @@
     <h1 id="page-title">Series Index</h1>
 
     <ul class="nav nav-tabs" id="index-tab" role="tablist">
-        <li class="nav-item">
-            <button class="nav-link active" id="title-index-tab">By Title</button>
-        </li>
-        <li class="nav-item" role="presentation">
-            <button class="nav-link" id="author-index-tab">By Author</button>
-        </li>
     </ul>
 
     <div id="index-tab-content">
-        <div id="title-index-container">
-            <ul class="nav" id="title-index-nav"></ul>
-            <div id="title-index"></div>
-        </div>
-        <div id="author-index-container">
-            <ul class="nav" id="author-index-nav"></ul>
-            <div id="author-index"></div>
-        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
@@ -69,8 +56,12 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-    <script src="/js/common.js"></script>
-    <script src="/js/series_index.js"></script>
+    <script src="/js/index.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function (ev) {
+            Basil.renderIndices();
+        });
+    </script>
 </body>
 
 </html>
