--- a/static/series_index.html
+++ b/static/series_index.html
@@ -59,6 +59,7 @@
     <script src="/js/index.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function (ev) {
+            Basil.getLoginInfo();
             Basil.renderIndices();
         });
     </script>
